force-app/main/default/objects/Snapshot__c/fields/Total_ARr_Acct__c.field-meta.xml
<CustomField>
    <fullName>Total_ARr_Acct__c</fullName>
    <label>Total ARR (Acct)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>