force-app/main/default/objects/Snapshot__c/fields/Won_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Won_Total_Count__c</fullName>
    <formula>IF(Closed__c = True ,  1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Won Total Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>