force-app/main/default/objects/Snapshot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Close_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2022</value>
    </filters>
    <label>All</label>
</ListView>